# BloxEnv

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: build.yml
docs/: CONFIG.md  ROADMAP.md
examples/basic/: bloxenv.config.luau  main.client.luau
examples/basic/Modules/: Greeting.luau
runtime/: bootstrap.luau
src/: EmbeddedRuntime.hpp.in  main.cpp
tests/: bloxenv.config.luau  smoke.server.luau
tests/Modules/: Inner.luau  Outer.luau
